--- a/TD2/factsage.css
+++ b/TD2/factsage.css
@@ -1,16 +1,10 @@
 .container {
   display: grid;
-  grid-template-columns: rep(4, auto);
-  grid-gap: 10px;
+  grid-template-rows: rep(4, auto);
+  grid-gap: 5px;
   padding: 8px;
   background-color: lightgrey;
   border: solid black 1px;
-}
-
-@media (min-width: 800px) {
-  .container form {
-    width: 70wv;
-  }
 }
 
 .row1 {
@@ -21,45 +15,31 @@
 .row2 {
   display: grid;
   grid-template-columns: repeat(3, auto);
+  background-color: yellow;
   justify-content: start center end;
+  border: solid black 2px;
   padding: 4px;
+  font-size: 1.25em;
+  font-weight: bold;
 }
-
+.row2 > div{
+  padding: 0 0.5em;
+}
 .row3 {
   display: grid;
+  grid-template-columns: repeat(2, auto);
   background-color: lightgoldenrodyellow;
+  border: solid black 2px;
   justify-content: start start;
+  border: solid black 2px;
   padding: 8px;
-}
-
-.row3 > div {
-  grid-template-columns: 1fr 4fr 1fr 4fr 2fr;
-  display: grid;
-  grid-gap: 30px;
-  height: 50px;
-  align-items: center;
-}
-.container input, select{
-  height: 20px;
-  padding: 1px 0;
-  margin: 0;
-}
-
-#inputZone {
-  display:grid;
-  grid-gap: 10px;
-  border: solid black 1px;
-  background-color: antiquewhite;
-  padding: 10px 5px;
-  font-weight: bold;
-  font-size: 1.25em;
 }
 
 .row4 {
   display: grid;
-  background-color: #f0da92;
-  border: solid black 1px;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: repeat(2, auto);
+  background-color: rgb(243, 193, 30);
+  border: solid black 2px;
   padding: 8px;
   grid-gap: 5px;
 }
@@ -67,6 +47,8 @@
 .row4 > div:nth-child(1) {
   display: grid;
   grid-template-columns: repeat(3, auto);
+  background-color: yellow;
+  border: solid black 1px;
   justify-content: start start start;
   padding: 8px;
 }
