--- a/TD3/index.css
+++ b/TD3/index.css
@@ -1,6 +1,121 @@
-body {
+body,
+html {
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0;
+  margin: 0;
+  font-family: Myriad Pro;
+}
+
+body h3 ,h4, h5{
+  margin: 0.4em 0;
+}
+
+body button{
+  background-color: transparent;
+  border:none;
+}
+
+header {
+  display: flex;
+  padding: 0 0.5em;
+  height: 10vh;
+  background-color: #c4dbf6;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#navigation-icons {
+  display: flex;
+}
+
+#navigation-icons button {
+  background-color: transparent;
+  border: none;
+}
+
+#navigation-icons img {
+  height: 30px;
+  width: 30px;
+}
+
+section {
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr 9fr 1fr;
+  grid-template-rows: 10vh 75vh 5vh;
   align-items: stretch;
 }
+
+#chat-title {
+  background-color: #3b8beb;
+  padding: 0.5em;
+  color: white;
+}
+
+#group-title {
+  background-color: #3b8beb;
+  padding: 0.5em;
+  border-left: solid 1px white;
+  color: white;
+}
+
+#groupe-disponible{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#groupe-disponible button{
+  height: 25px;
+  color: white;
+  fill:white;
+  width: 25px;
+}
+
+#groupe-disponible img{
+  height: 20px;
+  color: white;
+  width: 20px;
+}
+
+#chat-zone {
+  background-color: white;
+  padding: 0.5em;
+}
+#group-zone {
+  background-color: white;
+  padding: 0.5em;
+  border-left: solid 1px rgb(219, 217, 217);
+}
+
+#group-zone > div{
+  background-color: #ebf2fa;
+  color: #3b8beb; 
+}
+
+#group-zone .group-info {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: 3em;
+}
+
+#group-zone button {
+  margin: 0 1.5em;
+}
+#group-zone .default-button{
+  border: solid 1px #a4c3e9;
+  color: #3b8beb;
+  margin: 0 .5em;
+}
+
+#text-zone {
+  background-color: white;
+  display:flex;
+}
+#text-zone button{
+  background-color: #3b8beb;
+  width:6em;
+}
+
