--- a/TD3/index.css
+++ b/TD3/index.css
@@ -7,13 +7,16 @@ html {
   font-family: Myriad Pro;
 }
 
-body h3 ,h4, h5{
+body h3,
+h4,
+h5,
+p {
   margin: 0.4em 0;
 }
 
-body button{
+body button {
   background-color: transparent;
-  border:none;
+  border: none;
 }
 
 header {
@@ -23,6 +26,11 @@ header {
   background-color: #c4dbf6;
   justify-content: space-between;
   align-items: center;
+}
+
+header img {
+  width: 200px;
+  height: 40px;
 }
 
 #navigation-icons {
@@ -44,6 +52,7 @@ section {
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 10vh 75vh 5vh;
   align-items: stretch;
+  background-color: #ebf2fa;
 }
 
 #chat-title {
@@ -59,21 +68,21 @@ section {
   color: white;
 }
 
-#groupe-disponible{
-  display:flex;
+#groupe-disponible {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
-#groupe-disponible button{
+#groupe-disponible button {
   height: 25px;
   color: white;
-  fill:white;
+  fill: white;
   width: 25px;
 }
 
-#groupe-disponible img{
+#groupe-disponible img {
   height: 20px;
   color: white;
   width: 20px;
@@ -84,18 +93,17 @@ section {
   padding: 0.5em;
 }
 #group-zone {
-  background-color: white;
+  background-color: #ebf2fa;
   padding: 0.5em;
   border-left: solid 1px rgb(219, 217, 217);
 }
 
-#group-zone > div{
-  background-color: #ebf2fa;
-  color: #3b8beb; 
+#group-zone > div {
+  color: #3b8beb;
 }
 
 #group-zone .group-info {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 3em;
@@ -104,18 +112,26 @@ section {
 #group-zone button {
   margin: 0 1.5em;
 }
-#group-zone .default-button{
+#group-zone .default-button {
   border: solid 1px #a4c3e9;
   color: #3b8beb;
-  margin: 0 .5em;
+  margin: 0 0.5em;
 }
 
 #text-zone {
   background-color: white;
-  display:flex;
-}
-#text-zone button{
-  background-color: #3b8beb;
-  width:6em;
+  display: grid;
+  grid-template-columns: 80px auto 80px;
+  color: white;
 }
 
+#text-zone > div {
+  color: black;
+  padding: 0.2em 0.7em;
+}
+
+#text-zone button {
+  background-color: #3b8beb;
+  width: 6em;
+  color: white;
+}
