--- a/TD3/css/main.css
+++ b/TD3/css/main.css
@@ -10,6 +10,7 @@ html {
 body h3,
 h4,
 h5,
+h6,
 p {
   margin: 0.4em 0;
 }
@@ -52,7 +53,7 @@ section {
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 10vh 75vh 5vh;
   align-items: stretch;
-  background-color: #ebf2fa;
+  /* background-color: #ebf2fa; */
 }
 
 #chat-title {
@@ -88,34 +89,95 @@ section {
   width: 20px;
 }
 
+/***********************************************************/
+/* zone de chat */
+/***********************************************************/
+
 #chat-zone {
   background-color: white;
   padding: 0.5em;
+  display: flex;
+  flex-direction: column;
 }
+
+#chat-zone .message {
+  max-width: 300px;
+  background-color: rgb(222, 227, 231);
+  padding: 0.2em 0.5em;
+  border-radius: 10px;
+  margin-bottom: 0.5em;
+  box-shadow: 1px 2px 3px rgb(185, 185, 185);
+}
+
+#chat-zone .receiving {
+  align-self: flex-end;
+  display: flex;
+  background-color: rgb(134, 185, 233);
+  flex-direction: column;
+}
+
+.receiving .date {
+  color: rgba(255, 255, 255,.5);
+}
+.message .sender {
+  color: rgb(94, 173, 238);
+}
+
+.message h6 {
+  color: rgb(173, 175, 182);
+}
+
+/***********************************************************/
+/* zone de la selection de groupe */
+/***********************************************************/
 #group-zone {
-  background-color: #ebf2fa;
-  padding: 0.5em;
+  background-color: white;
+  padding: 1em;
   border-left: solid 1px rgb(219, 217, 217);
+}
+
+#group-wrapper {
+  /* background-color: #e4f0fd; */
+  padding: 0.2em 1em;
+  margin-bottom: 2em;
+}
+
+/* #group-wrapper .default {
+  background-color: rgb(213, 216, 218);
+} */
+
+#group-zone h3 {
+  color: #305480;
+  margin-left: 0.2em;
+}
+
+.group-info button:first-child {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin: 0 0.5em 0.1em;
+}
+
+.active-group {
+  background-color: rgb(172, 223, 243) !important;
 }
 
 #group-zone > div {
   color: #3b8beb;
 }
 
-#group-zone .group-info {
+.group-info {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 3em;
+  /* margin-bottom: 0.5em; */
+  padding: 0.5em;
+  background-color: #e4f0fd;
 }
 
-#group-zone button {
-  margin: 0 1.5em;
-}
 #group-zone .default-button {
   border: solid 1px #a4c3e9;
   color: #3b8beb;
-  margin: 0 0.5em;
+  margin: 0 1em;
 }
 
 #text-zone {
