--- a/TD3/css/main.css
+++ b/TD3/css/main.css
@@ -98,6 +98,11 @@ section {
   padding: 0.5em;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+}
+
+#chat-zone .admin {
+  background-color: pink !important;
 }
 
 #chat-zone .message {
@@ -134,6 +139,25 @@ section {
   background-color: white;
   padding: 1em;
   border-left: solid 1px rgb(219, 217, 217);
+}
+#adding-channel input {
+  padding: 0.5em;
+  width: 100%;
+}
+#adding-channel {
+  display: none;
+  justify-content: center;
+}
+
+#adding-channel button {
+  background-color: #3b8beb;
+  width: 8em;
+  color: white;
+}
+
+#adding-channel button:hover {
+  background-color: #87baf8;
+  color: rgb(25, 74, 233);
 }
 
 .group-wrapper {
@@ -194,9 +218,11 @@ section {
   color: white;
 }
 
-#text-zone > div {
+#text-zone > input {
   color: black;
   padding: 0.2em 0.7em;
+  width: 100%;
+  height: 80%;
 }
 
 #text-zone button {
