--- a/TD3/css/main.css
+++ b/TD3/css/main.css
@@ -194,7 +194,7 @@ section {
 
 #group-zone h3 {
   color: #305480;
-  margin-left: 0.2em;
+  margin-left: 1em;
 }
 
 .group-info button:first-child {
@@ -233,6 +233,10 @@ section {
   margin: 0 1em;
 }
 
+/***********************************************************/
+/* zone de la selection de groupe */
+/***********************************************************/
+
 #text-zone {
   background-color: white;
   display: grid;
@@ -245,6 +249,18 @@ section {
   padding: 0.2em 0.7em;
   width: 100%;
   height: 80%;
+}
+
+#thumbsUp {
+  background-color: #3b8beb;
+  width: 6em;
+  /* padding: auto; */
+  color: white;
+}
+
+#thumbsUp img {
+  margin-left: 1.3em;
+  margin-top: 0.2em;
 }
 
 #text-zone button {
